E2E: update service package version

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -23,7 +23,7 @@
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
-  "package_version":"1.83.1",
+  "package_version":"1.84.0-alpha-20200106143013-g0629804",
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
