--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -29,6 +29,12 @@
       "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
       "branch_mapping": {}
+    },
+    {
+      "path_to_root": "E2E_DocsBranch_Dynamic/codeblock",
+      "url": "https://github.com/OPS-E2E-PPE/E2E_RepoConifg_Dynamic",
+      "branch": "code-block-validation-indented-dependent",
+      "branch_mapping": {}
     }
   ],
   "branch_target_mapping": {
