--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -37,9 +37,5 @@
       "Pdf"
     ]
   },
-  "need_generate_pdf_url_template": true,
-  "docs_build_engine":
-   {
-     "name": "docfx_v3"
-   }
+  "need_generate_pdf_url_template": true
 }
