--- a/Bug142632/TOC.yml
+++ b/Bug142632/TOC.yml
@@ -5,38 +5,38 @@
 - name: DevTask194647
   items:
   - name: cs-cz
-    href: cs-cz.md
+    href: DevTask194647/cs-cz.md
   - name: de-de
-    href: de-de.md
+    href: DevTask194647/de-de.md
   - name: emoji
-    href: emoji.md
+    href: DevTask194647/emoji.md
   - name: en-us
-    href: en-us.md
+    href: DevTask194647/en-us.md
   - name: es-es
-    href: es-es.md
+    href: DevTask194647/es-es.md
   - name: fr-fr
-    href: fr-fr.md
+    href: DevTask194647/fr-fr.md
   - name: hu-hu
-    href: hu-hu.md
+    href: DevTask194647/hu-hu.md
   - name: it-it
-    href: it-it.md
+    href: DevTask194647/it-it.md
   - name: ja-jp
-    href: ja-jp.md
+    href: DevTask194647/ja-jp.md
   - name: ko-kr
-    href: ko-kr.md
+    href: DevTask194647/ko-kr.md
   - name: pl-pl
-    href: pl-pl.md
+    href: DevTask194647/pl-pl.md
   - name: pt-br
-    href: pt-br.md
+    href: DevTask194647/pt-br.md
   - name: pt-pt
-    href: pt-pt.md
+    href: DevTask194647/pt-pt.md
   - name: ru-ru
-    href: ru-ru.md
+    href: DevTask194647/ru-ru.md
   - name: sv-se
-    href: sv-se.md
+    href: DevTask194647/sv-se.md
   - name: tr-tr
-    href: tr-tr.md
+    href: DevTask194647/tr-tr.md
   - name: zh-cn
-    href: zh-cn.md
+    href: DevTask194647/zh-cn.md
   - name: zh-tw
-    href: zh-tw.md
+    href: DevTask194647/zh-tw.md
