--- a/E2E_DocsBranch_Dynamic/toc.yml
+++ b/E2E_DocsBranch_Dynamic/toc.yml
@@ -14,9 +14,10 @@
       - name: Link to a folder
         href: standard/microservices-architecture/
       - name: Link to an invalid md file
-        href: nonexist.md        
+        href: nonexist.md  
+        items:
         - name: Link to an invalid folder
-        href: welcome/
+          href: welcome/
 - name: expand default to false
   href: standard/index.md
   items:
@@ -29,6 +30,7 @@
       - name: Link to a folder
         href: standard/microservices-architecture/
       - name: Link to an invalid md file
-        href: nonexist.md        
+        href: nonexist.md
+        items:
         - name: Link to an invalid folder
-        href: welcome/
+          href: welcome/
