--- a/E2E_DocsBranch_Dynamic/toc.yml
+++ b/E2E_DocsBranch_Dynamic/toc.yml
@@ -1,28 +1,5 @@
 - name: "#1 Link to a md file"
-  href: standard/index.md
-  expanded: true
-  metadata:
-    title: metadata in toc yaml file
-    prod: test
-  items:
-  - name: "#2 Link to a md file in toc items"
-    href: standard/get-started.md
-    items:
-    - name: "#3 Outside Link Test"
-      href: https://www.microsoft.com/en-sg/education
-      items:
-      - name: "#4 Link to a folder"
-        href: standard/microservices-architecture/
-      - name: "#4 Link to an invalid md file"
-        href: nonexist.md  
-        items:
-        - name: "#5 Link to a valid md file"
-          href: welcome.md
-- name: "#1 Link to a md file"
-  href: standard/index.md  
-  metadata:
-    title: metadata in toc yaml file
-    prod: test
+  href: standard/index.md 
   items:
   - name: "#2 Link to a md file in toc items"
     href: standard/get-started.md
@@ -30,27 +7,17 @@
     items:
     - name: "#3 Outside Link Test"
       href: https://www.microsoft.com/en-sg/education
+      expanded: true
       items:
       - name: "#4 Link to a folder"
         href: standard/microservices-architecture/
       - name: "#4 Link to an invalid md file"
-        href: nonexist.md  
+        href: nonexist.md 
+        expanded: true
         items:
         - name: "#5 Link to a valid md file"
           href: welcome.md
-- name: expand default to false
-  href: standard/index.md
-  items:
-  - name: Link to a md file in toc items
-    href: standard/get-started.md
-    items:
-    - name: Outside Link Test
-      href: https://www.microsoft.com/en-sg/education
-      items:
-      - name: Link to a folder
-        href: standard/microservices-architecture/
-      - name: Link to an invalid md file
-        href: nonexist.md
-        items:
-        - name: Link to an invalid folder
-          href: welcome/
+          expanded: true
+          itmes:
+          - name: "#5 Link to a toc yml"
+            href: invalidFolder/
