--- a/E2E_DocsBranch_Dynamic/toc.yml
+++ b/E2E_DocsBranch_Dynamic/toc.yml
@@ -20,4 +20,4 @@
           expanded: true
           itmes:
           - name: "#5 Link to a toc yml"
-            href: invalidFolder/
+            href: standard/toc.yml
