--- a/E2E_DocsBranch_Dynamic/toc.yml
+++ b/E2E_DocsBranch_Dynamic/toc.yml
@@ -18,6 +18,6 @@
         - name: "#5 Link to a valid md file"
           href: welcome.md
           expanded: true
-          itmes:
+          items:
           - name: "#6 Link to a toc yml"
             href: standard/toc.yml
