--- a/E2E_DocsBranch_Dynamic/standard/toc.yml
+++ b/E2E_DocsBranch_Dynamic/standard/toc.yml
@@ -1,24 +1,24 @@
-- name: "#1 standard toc"
+- name: "#1-1 standard toc"
   href: index.md
-- name: "#1 link to a valid md file"
+- name: "#2-1 link to a valid md file"
   expanded: true
   items:
-  - name: "#2 standard toc"
+  - name: "#2-2 standard toc"
     href: microservices-architecture/
     items:
-    - name: "#3 standard toc"
+    - name: "#2-3 standard toc"
       href: microservices-architecture/container-docker-introduction/
       items:
-      - name: "#4 standard toc"
+      - name: "#2-4 standard toc"
         href: index.md
-- name: "#11 link to a valid md file"
+- name: "#3-1 link to a valid md file"
   expanded: true
   items:
-  - name: "#22 standard toc"
+  - name: "#3-2 standard toc"
     href: microservices-architecture
     items:
-    - name: "#33 standard toc"
+    - name: "#3-3 standard toc"
       href:  microservices-architecture/container-docker-introduction
       items:
-      - name: "#44 standard toc"
+      - name: "#3-4 standard toc"
         href: index.md
