--- a/E2E_DocsBranch_Dynamic/toc.yml
+++ b/E2E_DocsBranch_Dynamic/toc.yml
@@ -1,23 +1,8 @@
 - name: "#1 Link to a md file"
-  href: standard/index.md 
+  href: contextualTocTest/index.md
   items:
   - name: "#2 Link to a md file in toc items"
-    href: standard/get-started.md
-    expanded: true
+    href: contextualTocTest/test.md
     items:
-    - name: "#3 Outside Link Test"
-      href: https://www.microsoft.com/en-sg/education
-      expanded: true
-      items:
-      - name: "#4 Link to a folder"
-        href: standard/microservices-architecture/
-      - name: "#4 Link to an invalid md file"
-        href: nonexist.md 
-        expanded: true
-        items:
-        - name: "#5 Link to a valid md file"
-          href: welcome.md
-          expanded: true
-          items:
-          - name: "#6 Link to a toc yml"
-            href: standard/toc.yml
+    - name: "# link to a folder"
+      href: contextualTocTest/testFolder/
