--- a/E2E_DocsBranch_Dynamic/breadcrumb/toc.yml
+++ b/E2E_DocsBranch_Dynamic/breadcrumb/toc.yml
@@ -1,3 +1,11 @@
-- name: Docs
-  tocHref: /
-  topicHref: /
+- name: TocTest
+  tocHref: /contextualtoctest/
+  topicHref: /contextualtoctest/index
+  items:
+  - name: Contextual Toc Test
+    tocHref: /contextualtoctest/
+    topicHref: /contextualtoctest/test
+    items:
+    - name: Test Folder
+      tocHref: contextualTocTest/testFolder/
+      topicHref: contextualTocTest/testFolder/index
