--- a/E2E_DocsBranch_Dynamic/breadcrumb/toc.yml
+++ b/E2E_DocsBranch_Dynamic/breadcrumb/toc.yml
@@ -1,11 +1,7 @@
 - name: TocTest
   tocHref: /E2E_DocsBranch_Dynamic/
-  topicHref: /E2E_DocsBranch_Dynamic/contextualtoctest/index
+  topicHref: /E2E_DocsBranch_Dynamic/index
   items:
-  - name: Contextual Toc Test
-    tocHref: /E2E_DocsBranch_Dynamic/contextualtoctest/
-    topicHref: /E2E_DocsBranch_Dynamic/contextualtoctest/test
-    items:
-    - name: Test Folder
-      tocHref: /E2E_DocsBranch_Dynamic/contextualTocTest/testFolder/
-      topicHref: /E2E_DocsBranch_Dynamic/contextualTocTest/testFolder/index
+  - name: contextualTocTest
+    tocHref: /E2E_DocsBranch_Dynamic/standard/
+    topicHref: /E2E_DocsBranch_Dynamic/contextualTocTest/index
